--- a/VertxSamples/pom.xml
+++ b/VertxSamples/pom.xml
@@ -82,8 +82,11 @@
             <artifactId>vertx-web</artifactId>
             <version>${vertx.version}</version>
         </dependency>
-
-
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-service-discovery</artifactId>
+            <version>${vertx.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>ch.qos.logback</groupId>
