--- a/VertxSamples/pom.xml
+++ b/VertxSamples/pom.xml
@@ -99,5 +99,11 @@
             <version>1.2.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-service-discovery-bridge-zookeeper</artifactId>
+            <version>${vertx.version}</version>
+        </dependency>
+
     </dependencies>
 </project>
