--- a/VelocitySamples/pom.xml
+++ b/VelocitySamples/pom.xml
@@ -7,8 +7,22 @@
     <groupId>VelocitySamples</groupId>
     <artifactId>VelocitySamples</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>7</source>
+                    <target>7</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
         <velocity.version>1.7</velocity.version>
     </properties>
 
