Added code for blog post Creating a CXF service that responds with JSON or XML (http://putridparrot.com/blog/creating-a-cxf-service-that-responds-with-json-or-xml/)

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,8 @@
 /GiraffeTest/GiraffeTest/bin
 /GiraffeTest/GiraffeTest/obj
 /GiraffeTest/.vs/GiraffeTest/v15/*.suo
+/CxfServer/.idea
+/CxfServer/target
+/CxfServer/*.iml
+/CxfClient/.idea
+/CxfClient/*.iml
