Code for Python REST service using web.py (http://putridparrot.com/blog/python-rest-service-using-web-py/), added the template code

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,8 @@
 /CxfClient/*.iml
 /CxfClient/target
 /GoRESTWithMux/.idea
+/PyWebPy/.idea
+/PyWebPy/venv
+/PyWebPy/__pycache__
+/PyBottle/.idea
+/PyBottle/venv
