Code for Unit testing your Kotlin code (http://putridparrot.com/blog/category/kotlin/)
Code for Trying out Refit (a REST client library)  (http://putridparrot.com/blog/category/refit/)

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,18 @@
 /cxfws/*.iml
 /SuaveTest/SuaveTest/bin
 /SuaveTest/SuaveTest/obj
+/KotlinUnitTest/.idea
+/KotlinUnitTest/out
+/KotlinUnitTest/*.iml
+/RefitExample/RefitClient/RefitClient/bin
+/RefitExample/RefitClient/RefitClient/obj
+/RefitExample/packages
+/RefitExample/RefitClient/packages
+/RefitExample/RefitExample/RefitExample.ServiceInterface/bin
+/RefitExample/RefitExample/RefitExample.ServiceInterface/obj
+/RefitExample/RefitExample/RefitExample.ServiceModel/bin
+/RefitExample/RefitExample/RefitExample.ServiceModel/obj
+/RefitExample/RefitExample/RefitExample.Tests/bin
+/RefitExample/RefitExample/RefitExample.Tests/obj
+/RefitExample/RefitExample/RefitExample/bin
+/RefitExample/RefitExample/RefitExample/obj
