Added an example of using JMock (http://putridparrot.com/blog/using-jmock/)

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,6 @@
 /RabbitMQSample/RabbitMQSend/packages
 /RabbitMQSample/RabbitMQSend/RabbitMQSend/obj
 /RabbitMQSample/RabbitMQSend/RabbitMQSend/bin
+/JMockSample/.idea
+/JMockSample/target
+/JMockSample/*.iml
