Added code to supply Hystrix dashboard information

--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,5 @@
 /FoldingExp/cmake-build-debug
 /ThreadsPromisesFutures/cmake-build-debug
 /ThreadsPromisesFutures/.idea
+/LottieTest/LottieTest/bin
+/LottieTest/LottieTest/obj
