--- a/VertxSamples/pom.xml
+++ b/VertxSamples/pom.xml
@@ -92,6 +92,11 @@
             <artifactId>vertx-config</artifactId>
             <version>${vertx.version}</version>
         </dependency>
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-circuit-breaker</artifactId>
+            <version>${vertx.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>ch.qos.logback</groupId>
