--- a/.gitignore
+++ b/.gitignore
@@ -92,3 +92,9 @@ obj
 /GraphQLTests/packages/Newtonsoft.Json.10.0.3
 /GraphQLTests/packages/System.Reactive.Core.3.1.1
 /GraphQLTests/packages/System.Reactive.Interfaces.3.1.1
+/MyWebApp/.idea
+/MyWebApp/temp
+/MyWebApp/MyWebApp.iml
+/MyWebApp/target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
+/MyWebApp/target
+/MyWebApp/web/WEB-INF/classes
