--- a/BiometricTest/BiometricTest/BiometricTest.iOS/Info.plist
+++ b/BiometricTest/BiometricTest/BiometricTest.iOS/Info.plist
@@ -35,6 +35,6 @@
 	<key>XSAppIconAssets</key>
 	<string>Assets.xcassets/AppIcon.appiconset</string>
 	<key>NSFaceIDUsageDescription</key>
-	<string>New Entry</string>
+	<string>Use your face to authenticate</string>
 </dict>
 </plist>
