--- a/nanoframework/M5StackCore2/M5Core2Examples/M5Core2Examples/packages.config
+++ b/nanoframework/M5StackCore2/M5Core2Examples/M5Core2Examples/packages.config
@@ -31,10 +31,12 @@
   <package id="nanoFramework.System.IO.Streams" version="1.1.27" targetFramework="netnano1.0" />
   <package id="nanoFramework.System.Math" version="1.5.18" targetFramework="netnano1.0" />
   <package id="nanoFramework.System.Net" version="1.10.38" targetFramework="netnano1.0" />
-  <package id="nanoFramework.System.Net.Http.Client" version="1.5.54" targetFramework="netnano1.0" />
+  <package id="nanoFramework.System.Net.Http" version="1.5.54" targetFramework="netnano1.0" />
+  <package id="nanoFramework.System.Net.Http.Server" version="1.5.54" targetFramework="netnano1.0" />
   <package id="nanoFramework.System.Numerics" version="1.2.144" targetFramework="netnano1.0" />
   <package id="nanoFramework.System.Text" version="1.2.22" targetFramework="netnano1.0" />
   <package id="nanoFramework.System.Threading" version="1.1.8" targetFramework="netnano1.0" />
+  <package id="nanoFramework.WebServer" version="1.1.47" targetFramework="netnano1.0" />
   <package id="nanoFramework.Windows.Storage" version="1.5.24" targetFramework="netnano1.0" />
   <package id="nanoFramework.Windows.Storage.Streams" version="1.14.19" targetFramework="netnano1.0" />
   <package id="UnitsNet.nanoFramework.ElectricCurrent" version="4.148.0" targetFramework="netnano1.0" />
