Added MAUI Android foreground service, related to post http://putridparrot.com/blog/android-foreground-service-using-maui/

--- a/.gitignore
+++ b/.gitignore
@@ -189,3 +189,4 @@ fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots/**/*.png
 fastlane/test_output
+/nanoframework/M5StackCore2/M5Core2Examples/packages
