https://putridparrot.com/blog/multi-spa-using-next-js/

--- a/microfrontend-react/shell/package.json
+++ b/microfrontend-react/shell/package.json
@@ -39,6 +39,7 @@
     "@mui/icons-material": "^5.15.4",
     "@mui/material": "^5.15.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "usehooks-ts": "^2.9.4"
   }
 }
