--- a/EchoService/Go/echo_service/deployment.yaml
+++ b/EchoService/Go/echo_service/deployment.yaml
@@ -16,47 +16,47 @@ spec:
         app: echo
     spec:
       containers:
-        - name: echo
-          image: putridparrotreg/putridparrot.echo_service:v1
-          ports:
-            - containerPort: 8080
-          resources:
-            requests:
-              memory: "100Mi"
-              cpu: "100m"
-            limits:
-              memory: "200Mi"
-              cpu: "200m"
-          livenessProbe:
-            httpGet:
-              path: /livez
-              port: 8080
-            initialDelaySeconds: 30
-            periodSeconds: 10
-          readinessProbe:
-            httpGet:
-              path: /readyz
-              port: 8080
-            initialDelaySeconds: 5
-            periodSeconds: 5
+      - name: echo
+        image: putridparrotreg/putridparrot.echo_service:v1
+        ports:
+        - containerPort: 8080
+        resources:
+          requests:
+            memory: "100Mi"
+            cpu: "100m"
+          limits:
+            memory: "200Mi"
+            cpu: "200m"
+        livenessProbe:
+          httpGet:
+            path: /livez
+            port: 8080
+          initialDelaySeconds: 30
+          periodSeconds: 10
+        readinessProbe:
+          httpGet:
+            path: /readyz
+            port: 8080
+          initialDelaySeconds: 5
+          periodSeconds: 5
 
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: echo_service
+  name: echo-service
   namespace: dev
   labels:
     app: echo
 spec:
   type: ClusterIP
   selector:
-    app: echo
+    app: echo 
   ports:
-    - name: http
-      port: 80
-      targetPort: 8080
-      protocol: TCP
+  - name: http
+    port: 80
+    targetPort: 8080
+    protocol: TCP
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
@@ -68,13 +68,13 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
-    - host: mydomain.com
-      http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: echo_service
-                port:
-                  number: 80
+  - host: mydomain.com
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: echo-service
+            port:
+              number: 80
