Update to more recent base image

--- a/EchoService/Java/echo_service/Dockerfile
+++ b/EchoService/Java/echo_service/Dockerfile
@@ -1,15 +1,15 @@
-FROM eclipse-temurin:21-jdk AS builder
+FROM maven:3.9.11-eclipse-temurin-21 AS builder
 
 WORKDIR /app
 
 COPY . .
-RUN ./mvnw clean package -DskipTests
+RUN mvn clean package -DskipTests
 
 FROM eclipse-temurin:21-jre AS runtime
 
 WORKDIR /app
 
-COPY --from=builder /app/target/echo-service.jar ./echo-service.jar
+COPY --from=builder /app/target/echo_service-1.0-SNAPSHOT.jar ./echo-service.jar
 
 ENV PORT=8080
 EXPOSE 8080
