Update pom to generate MANIFEST

--- a/EchoService/Java/echo_service/pom.xml
+++ b/EchoService/Java/echo_service/pom.xml
@@ -21,4 +21,21 @@
             <version>3.5.5</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>3.5.5</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
